--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^13.5.1"
+    "discord.js": "^13.5.1",
+    "dotenv": "^10.0.0"
   }
 }
